--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -134,3 +134,10 @@ Port_Range=Port Range (* or PORT1_MIN-PORT_MAX)
 Bad_JS_Filter_Function_Warning=Bad Javascript function should be of function(string) returning boolean 
 Bad_JS_Host_Warning=Bad format of host, it should not contains spaces
 Bad_JS_PortRange_Warning=Bad format for port range format is : * (all port) or portNumber (for single port) or minPort-maxPort 
+
+Sort_ToolTip=Sort Connections by time
+Clean_ToolTip=Remove selected connection
+Refresh_ToolTip=Refresh view of connection
+ViewDetails_ToolTip=View the details of the connection 
+
+Global_Var_Cleaned=Global Variable Cleaned
