--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -33,7 +33,7 @@
 		<javassist.version>3.21.0-GA</javassist.version>
 		<version.jboss.bom.wfk>2.7.0-redhat-1</version.jboss.bom.wfk>
 		<scannotation.version>1.0.3</scannotation.version>
-		<jackson.version>2.8.8</jackson.version>
+		<jackson.version>2.8.11.3</jackson.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<google-json.version>1.1</google-json.version>
 		<vaadin-sliderpanel.version>1.4.2</vaadin-sliderpanel.version>
@@ -70,7 +70,16 @@
 			<url>https://maven.repository.redhat.com/ga/</url>
 		</repository>
 
-
+		<repository>
+			<id>snapshots-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 
 
 	</repositories>
@@ -161,14 +170,14 @@
 			<artifactId>json-simple</artifactId>
 			<version>${google-json.version}</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
 		<dependency>
-		    <groupId>com.jayway.jsonpath</groupId>
-		    <artifactId>json-path</artifactId>
-		    <version>2.4.0</version>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.4.0</version>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>commons-lang</groupId>
