--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -41,9 +41,11 @@ SortToolTip=Sort items by date
 
 Import_Button=Import
 ImportToolTip=Import Scenario
-
+ImportConfigToolTip=Import Configuration
+Trace_Function_Button=Set Trace Function
 Export_Button=Export
 ExportToolTip=Export Scenario
+ExportConfigToolTip=Export Configuration
 
 Configure_Button=Configure
 Configure_ToolTip=Configure connection
@@ -88,6 +90,7 @@ moveUp=moveUp
 moveDown=moveDown
 autoRefreshCheckBox=Auto Refresh java application view
 globalConfigPane=Global Configuration
+traceFunctionPane=Trace Functions
 
 jsLibPane=Global JS Function
 jsFilterPane=Filtering functions
@@ -97,8 +100,27 @@ jsDefaultMockFunctionPane=Default mock function
 
 Filter_Button=Filter
 Filter_TootTip=Filter Input Requests
-Format_Display_Input_Button=Format Input
-Format_Display_Output_Button=Format Output
+Format_Display_Input_Button=Format input
+Format_Display_Output_Button=Format output
+Format_Display_Mock_Input_Button=Format mock input
+Format_Display_Mock_Output_Button=Format mock output
+
+format_function_output_display=output format function
+format_function_mock_output_display=mock output format function
+format_function_input_display=input format function
+format_function_mock_input_display=mock input format function
+
+Format_Display_Input_ToolTip=Set function to filter input
+Format_Display_Output_ToolTip=Set function to format output
+Format_Display_Mock_Input_ToolTip=Set function to filter mock input
+Format_Display_Mock_Output_ToolTip=Set function to format mock output
+
+
+Filter_ToolTip=Set function to filter Connections
+Trace_Function_ToolTip=Set function to trace connection
+
+
+
 Format_Display_TootTip=Format Input Requests
 filter_function_select=Filter Javascript Function
 format_function_display=Format and display Javascript Function
@@ -141,3 +163,6 @@ Refresh_ToolTip=Refresh view of connection
 ViewDetails_ToolTip=View the details of the connection 
 
 Global_Var_Cleaned=Global Variable Cleaned
+
+warn_unable_to_import_conf=Unable to import config
+override_Config_Question=This will override your actual config
