--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -25,7 +25,7 @@ Save_Button=Save
 Input=Input
 GroovyEditor=Groovy editor
 Refresh_ToolTip=Refresh
-Refresh_Button=Retresh
+Refresh_Button=Refresh
 MockedCommunications=Mocked Communications
 Output=Output
 Json=Json
