--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -141,6 +141,13 @@
 			<artifactId>commons-text</artifactId>
 			<version>1.6</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/javax.ejb/javax.ejb-api -->
 		<dependency>
 			<groupId>javax.ejb</groupId>
