--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -51,8 +51,8 @@
 			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
 		</repository>
 		<repository>
-			<id>vaadin-addons</id>
-			<url>http://maven.vaadin.com/vaadin-addons</url>
+		   <id>vaadin-addons</id>
+		   <url>https://maven.vaadin.com/vaadin-addons</url>
 		</repository>
 		<repository>
 			<id>vaadin-snapshots</id>
@@ -224,9 +224,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.jenetware</groupId>
-			<artifactId>easyApp</artifactId>
-			<version>${easyApp.version}</version>
+		   <groupId>org.vaadin.addons</groupId>
+		   <artifactId>easyapp</artifactId>
+		   <version>0.2</version>
 		</dependency>
 
 
