--- a/smockerOverlay/pom.xml
+++ b/smockerOverlay/pom.xml
@@ -24,15 +24,15 @@
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
-		
-		
-				
+
+
+
 		<dependency>
-		    <groupId>com.jenetics</groupId>
+			<groupId>com.jenetics</groupId>
 			<artifactId>smocker</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		    <scope>system</scope>
-		    <systemPath>${project.basedir}/../smockerVaadin/target/smocker-1.0-SNAPSHOT-classes.jar</systemPath>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/../smockerVaadin/target/smocker-1.0-SNAPSHOT-classes.jar</systemPath>
 		</dependency>
 
 	</dependencies>
@@ -40,6 +40,15 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -53,6 +62,7 @@
 						</overlay>
 					</overlays>
 				</configuration>
+
 			</plugin>
 		</plugins>
 	</build>
