--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -8,6 +8,7 @@ MockView=Mock Space
 LogsView=Logs
 ConfigView=Config
 ViewDetails_Button=View Details
+ViewDetails_Button_ToolTip=View the detail of selected item (CTRL + E)
 Communication=Communication
 Communications=Communications
 ViewDetails_ToolTip=View all the communication\n
@@ -22,19 +23,22 @@ AddToMock_ToolTip=Add selected value to mock space\n
 AddAllToMock_ToolTip=Add all values to mock space\n
 Mute_Button=Mute
 Save_Button=Save
+Save_Button_ToolTip="Save (CTRL + S)"
+
 Input=Input
 GroovyEditor=Groovy editor
 Refresh_ToolTip=Refresh
 Refresh_Button=Refresh
+Refresh_Button_ToolTip=Refresh application (CTRL + R)
 MockedCommunications=Mocked Communications
 Output=Output
 Json=Json
 remove=remove
 Remove_ToolTip=remove selected item
-CleanAll_ToolTip=Clean every thing
-CleanAll_Button=Clean All
-Clean_Button=Clean
-CleanToolTip=Clean selected item
+CleanAll_ToolTip=Remove every thing
+CleanAll_Button=Remove All
+Clean_Button=Remove
+Clean_Button_ToolTip=Remove selected item (CTRL + D)
 
 Sort_Button=Sort
 SortToolTip=Sort items by date
@@ -43,6 +47,8 @@ Import_Button=Import
 ImportToolTip=Import Scenario
 ImportConfigToolTip=Import Configuration
 Trace_Function_Button=Set Trace Function
+
+
 Export_Button=Export
 ExportToolTip=Export Scenario
 ExportConfigToolTip=Export Configuration
@@ -159,10 +165,11 @@ Bad_JS_PortRange_Warning=Bad format for port range format is : * (all port) or p
 
 Sort_ToolTip=Sort Connections by time
 Clean_ToolTip=Remove selected connection
-Refresh_ToolTip=Refresh view of connection
-ViewDetails_ToolTip=View the details of the connection 
 
 Global_Var_Cleaned=Global Variable Cleaned
 
 warn_unable_to_import_conf=Unable to import config
 override_Config_Question=This will override your actual config
+
+ComName_Function_Button=Comm name function
+ComName_Function_ToolTip=Choose the function to display a name for each communication
