--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -38,7 +38,7 @@
 		<google-json.version>1.1</google-json.version>
 		<vaadin-sliderpanel.version>1.4.2</vaadin-sliderpanel.version>
 		<version.wildfly-swarm>2018.3.3</version.wildfly-swarm>
-		<easyApp.version>0.2</easyApp.version>
+		<easyApp.version>0.4</easyApp.version>
 		<apache.commons.version>3.7</apache.commons.version>
 		<commons-collections4.version>4.1</commons-collections4.version>
 		<lucene.version>7.4.0</lucene.version>
@@ -51,8 +51,8 @@
 			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
 		</repository>
 		<repository>
-		   <id>vaadin-addons</id>
-		   <url>https://maven.vaadin.com/vaadin-addons</url>
+			<id>vaadin-addons</id>
+			<url>https://maven.vaadin.com/vaadin-addons</url>
 		</repository>
 		<repository>
 			<id>vaadin-snapshots</id>
@@ -135,7 +135,7 @@
 			<artifactId>uploadbutton</artifactId>
 			<version>0.1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -148,7 +148,7 @@
 			<version>1.6</version>
 		</dependency>
 
-		
+
 		<!-- https://mvnrepository.com/artifact/javax.ejb/javax.ejb-api -->
 		<dependency>
 			<groupId>javax.ejb</groupId>
@@ -225,16 +225,16 @@
 		</dependency>
 
 		<dependency>
-		   <groupId>org.vaadin.addons</groupId>
-		   <artifactId>easyapp</artifactId>
-		   <version>0.3</version>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>easyapp</artifactId>
+			<version>${easyApp.version}</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>aceeditor</artifactId>
-			<version>0.8.14</version>
+			<version>0.8.15</version>
 		</dependency>
 
 
@@ -577,49 +577,17 @@
 				</configuration>
 			</plugin>
 
-<!-- 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>jar-services-provided</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			Install the jar locally
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>Add-2-local-repository</id>
-						<phase>package</phase>
-						<configuration>
-							<packaging>jar</packaging>
-							<file>${project.build.directory}\${artifactId}-${version}.jar</file>
-						</configuration>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<packaging>jar</packaging>
-					<artifactId>${project.artifactId}</artifactId>
-					<groupId>${project.groupId}</groupId>
-					<version>${project.version}</version>
-					<packaging>jar</packaging>
-					<file>
-						${project.build.directory}/${project.artifactId}-${project.version}.jar
-					</file>
-				</configuration>
-
-			</plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
+				<executions> <execution> <id>jar-services-provided</id> <phase>compile</phase> 
+				<goals> <goal>jar</goal> </goals> </execution> </executions> </plugin> Install 
+				the jar locally <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-install-plugin</artifactId> 
+				<executions> <execution> <id>Add-2-local-repository</id> <phase>package</phase> 
+				<configuration> <packaging>jar</packaging> <file>${project.build.directory}\${artifactId}-${version}.jar</file> 
+				</configuration> <goals> <goal>install-file</goal> </goals> </execution> 
+				</executions> <configuration> <packaging>jar</packaging> <artifactId>${project.artifactId}</artifactId> 
+				<groupId>${project.groupId}</groupId> <version>${project.version}</version> 
+				<packaging>jar</packaging> <file> ${project.build.directory}/${project.artifactId}-${project.version}.jar 
+				</file> </configuration> </plugin> -->
 
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
 				<executions> <execution> <id>make-a-jar</id> <phase>compile</phase> <goals> 
