--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -510,11 +510,19 @@
 			<version>1.0.0-rc5</version> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/com.eclipsesource.j2v8/j2v8_win32_x86_64 -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.eclipsesource.j2v8</groupId>
 			<artifactId>j2v8_win32_x86_64</artifactId>
 			<version>4.6.0</version>
+		</dependency> -->
+		
+		<!-- https://mvnrepository.com/artifact/com.eclipsesource.j2v8/j2v8_linux_x86_64 -->
+		<dependency>
+		    <groupId>com.eclipsesource.j2v8</groupId>
+		    <artifactId>j2v8_linux_x86_64</artifactId>
+		    <version>4.8.0</version>
 		</dependency>
+		
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
