--- a/dockerLinux/Dockerfile
+++ b/dockerLinux/Dockerfile
@@ -1,5 +1,5 @@
 FROM jboss/wildfly
-ENV dbFolder .
+#ENV dbFolder .
 
 RUN /opt/jboss/wildfly/bin/add-user.sh admin Admin#70365 --silent
 CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0"]
@@ -11,7 +11,7 @@ COPY eclipselink-2.7.6.jar /opt/jboss/wildfly/modules/system/layers/base/org/ecl
 COPY module.xml /opt/jboss/wildfly/modules/system/layers/base/org/eclipse/persistence/main
 
 COPY standalone.conf /opt/jboss/wildfly/bin
-RUN sed -i "s|-Dsmocker.dbdir=.|-Dsmocker.dbdir=${dbFolder} |g" /opt/jboss/wildfly/bin/standalone.conf
+#RUN sed -i "s|-Dsmocker.dbdir=.|-Dsmocker.dbdir=${dbFolder} |g" /opt/jboss/wildfly/bin/standalone.conf
 
 
 COPY libj2v8_linux_x86_64.so /opt/jboss/wildfly/bin
