--- a/dockerWildFlyUnbutu/Dockerfile
+++ b/dockerWildFlyUnbutu/Dockerfile
@@ -1,4 +1,4 @@
-FROM        ubuntu:xenial
+FROM ubuntu:16.04
 MAINTAINER  igolus
 
 # update and install dependencies
@@ -9,37 +9,46 @@ RUN         	apt-get update \
 				&& add-apt-repository -y ppa:ubuntu-toolchain-r/test \
                 && apt-get update \
 				&& apt-get install -y \
+                    curl \
+				&& apt-get install -y \
                     gcc-4.9 g++-4.9 gcc-4.9-base \
 				&& update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 100 \
                 && update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 100
-				
-				
+
 # Set the WILDFLY_VERSION env variable
-ENV WILDFLY_VERSION 20.0.1.Final
-ENV WILDFLY_SHA1 95366b4a0c8f2e6e74e3e4000a98371046c83eeb
+ENV WILDFLY_VERSION 10.0.0.Final
+ENV WILDFLY_SHA1 c0dd7552c5207b0d116a9c25eb94d10b4f375549
 ENV JBOSS_HOME /opt/jboss/wildfly
 
-USER root
+# Set the JAVA_HOME variable to make it clear where Java is located
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
 
-# Add the WildFly distribution to /opt, and make wildfly the owner of the extracted tar content
-# Make sure the distribution is available from a well-known place
-RUN cd $HOME \
-    && curl -O https://download.jboss.org/wildfly/$WILDFLY_VERSION/wildfly-$WILDFLY_VERSION.tar.gz \
-    && sha1sum wildfly-$WILDFLY_VERSION.tar.gz | grep $WILDFLY_SHA1 \
-    && tar xf wildfly-$WILDFLY_VERSION.tar.gz \
-    && mv $HOME/wildfly-$WILDFLY_VERSION $JBOSS_HOME \
-    && rm wildfly-$WILDFLY_VERSION.tar.gz \
-    && chown -R jboss:0 ${JBOSS_HOME} \
-    && chmod -R g+rw ${JBOSS_HOME}
+# Execute system update
+# openjdk and wildfly will be installed
+RUN apt-get update \
+	&& apt-get -y install xmlstarlet bsdtar unzip curl wget openjdk-8-jdk \
+	&& cd $HOME \
+	&& curl -O https://download.jboss.org/wildfly/$WILDFLY_VERSION/wildfly-$WILDFLY_VERSION.tar.gz \
+	&& sha1sum wildfly-$WILDFLY_VERSION.tar.gz | grep $WILDFLY_SHA1 \
+	&& tar xf wildfly-$WILDFLY_VERSION.tar.gz \
+	&& mkdir -p $JBOSS_HOME \
+	&& mv $HOME/wildfly-$WILDFLY_VERSION/* $JBOSS_HOME/ \
+	&& rm wildfly-$WILDFLY_VERSION.tar.gz \
+	&& mkdir -p $JBOSS_HOME/modules/com/oracle/ojdbc7/main/ \
+	&& mv /tmp/ojdbc7-12.1.0.1.jar $JBOSS_HOME/modules/com/oracle/ojdbc7/main/ojdbc7.jar \
+	&& mv /tmp/module.xml $JBOSS_HOME/modules/com/oracle/ojdbc7/main/ \
+	&& mv /tmp/waitfordeployment.sh /opt/jboss/wildfly/bin/ \
+	&& chmod 777 /opt/jboss/wildfly/bin/waitfordeployment.sh \
+	&& rm -rf /tmp/* \
+	&& apt-get clean \
+	&& rm -rf /var/lib/apt/lists/*
 
 # Ensure signals are forwarded to the JVM process correctly for graceful shutdown
 ENV LAUNCH_JBOSS_IN_BACKGROUND true
 
-USER jboss
-
 # Expose the ports we're interested in
-EXPOSE 8080
+EXPOSE 80
 
 # Set the default command to run on boot
 # This will boot WildFly in the standalone mode and bind to all interface
-CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0"]
+ENTRYPOINT ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0"]
