--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -173,3 +173,5 @@ override_Config_Question=This will override your actual config
 
 ComName_Function_Button=Comm name function
 ComName_Function_ToolTip=Choose the function to display a name for each communication
+
+Test_J2V8_Engine=Test J2V8 Engine
